force-app/main/default/objects/Violation_Type_Variable__c/fields/Label_English__c.field-meta.xml
<CustomField>
    <fullName>Label_English__c</fullName>
    <label>Label English</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>