force-app/main/default/objects/Violation_Type_Variable__c/fields/Label_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Label_Spanish__c</fullName>
    <label>Label Spanish</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>