force-app/main/default/objects/Violation_Type_Variable__c/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <description>Master violation type the variable relates to</description>
    <inlineHelpText>Violation type this variable contributes to the calculation of</inlineHelpText>
    <label>Violation Type</label>
    <referenceTo>Violation_Type__c</referenceTo>
    <relationshipLabel>Violation Type Variables</relationshipLabel>
    <relationshipName>Violation_Type_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>